--- a/package.json
+++ b/package.json
@@ -18,5 +18,9 @@
 		"typescript": "^5.0.0",
 		"vite": "^5.0.3"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"@wix/data": "^1.0.79",
+		"@wix/sdk": "^1.7.5"
+	}
 }
