--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
 		"@wix/sdk": "^1.7.5",
 		"3d-force-graph": "^1.73.2",
 		"d3-array": "^3.2.4",
-		"d3-hierarchy": "^3.1.2"
+		"d3-hierarchy": "^3.1.2",
+		"three": "^0.161.0",
+		"three-spritetext": "^1.8.2"
 	}
 }
