--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 		"d3-array": "^3.2.4",
 		"d3-hierarchy": "^3.1.2",
 		"three": "^0.161.0",
-		"three-spritetext": "^1.8.2"
+		"three-spritetext": "^1.8.2",
+		"vimeo": "^2.3.1"
 	}
 }
