--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@vimeo/player": "^2.21.0",
 		"3d-force-graph": "^1.73.2",
 		"d3-array": "^3.2.4",
 		"d3-hierarchy": "^3.1.2",
