--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 	"dependencies": {
 		"@vimeo/player": "^2.21.0",
 		"3d-force-graph": "^1.73.2",
+		"bits-ui": "^0.21.10",
 		"d3-array": "^3.2.4",
 		"d3-force": "^3.0.0",
 		"d3-hierarchy": "^3.1.2",
