--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"@sveltejs/adapter-vercel": "^5.3.0",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
+		"@tailwindcss/typography": "^0.5.13",
 		"autoprefixer": "^10.4.17",
 		"postcss": "^8.4.35",
 		"svelte": "^4.2.7",
